uhhhhhh i forget like word wrappin and oh a thing like a buge where uh some messages didnt show up :(

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ input[type="text"], input[class="color"], #color
 	position:absolute;
 	top:16px;
 	left:16px;
-	right:320px;
+	right:278px;
 	bottom:60px;
 	border:1px solid #aaaaaa;
 	border-radius:5px;
@@ -148,6 +148,11 @@ input[type="text"], input[class="color"], #color
 	overflow-y:auto;
 	background:white;
 	font-size:14px;
+	white-space: pre-wrap; /* css-3 */
+	white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */ 
 }
 
 a
@@ -161,7 +166,7 @@ a
 	position:absolute;
 	top:16px;
 	right:16px;
-	width:287px;
+	width:245px;
 	bottom:16px;
 	border:1px solid #aaaaaa;
 	border-radius:8px;
@@ -169,6 +174,7 @@ a
 	padding:8px;
 	overflow-y:auto;
 	background:white;
+	font-size:16px;
 }
 
 #page_client .channelInput
@@ -179,8 +185,8 @@ a
 	font-size: 16px;
 	left: 16px;
 	box-sizing: border-box;
-	width: -webkit-calc(100% - 340px);
-	width: calc(100% - 460px);
+	width: -webkit-calc(100% - 416px);
+	width: calc(100% - 416px);
 	padding-left:8px;
 	padding-right:8px;
 }
@@ -189,7 +195,7 @@ a
 {
 	position: absolute;
 	bottom: 16px;
-	right: 332px;
+	right: 288px;
 	width: 96px;
 	height: 31px;
 	font-size:16px;
